Renaming 'planName' to 'plan'
