# src/routes/PlanRouter.ts
@@ -13,13 +13,13 @@ import { PlanResponse } from "../response/PlanResponse"
 export const PlanRouter = Router()
 
 //ROADMAP
-PlanRouter.route("/:planName")
+PlanRouter.route("/:plan")
     .all(UserResponse.IsAuthenticated)
     .get(ServerResponse.ResponseNotImplemented)
     .post(ServerResponse.ResponseNotImplemented)
     .patch(ServerResponse.ResponseNotImplemented)
     .delete(ServerResponse.ResponseNotImplemented)
 
-PlanRouter.route('/:planName/reload')
+PlanRouter.route('/:plan/reload')
     .all(UserResponse.IsAuthenticated)
     .post(PlanResponse.Reload)
